# traintastic

.github/workflows/: build.yml
client/: CMakeLists.txt
package/: Info.plist
server/: CMakeLists.txt
shared/gfx/: icon.icns
shared/src/traintastic/utils/: standardpaths.cpp  standardpaths.hpp
shared/translations/: traintastic-lang.cmake
